# bathesis_heimspeicher

./: .gitignore  01_Tester_Anweiszungen_Simulation_Betriebsweise.txt  Beispiele.py  Leistungsviolin.py  README.md  Vergleichende_Übersicht.py  anzeige_leistung_soc.py  archiv.py  archiv_gridfriendly.py  dashboard.py  dashboard_tabs_over_size.py  gridfriendly.py  imports_and_variables.py  main  main.py  own_consumption.py  plot_for_selected_days.py  plot_histogram.py  plot_trend_of_power.py  pyproject.toml  read_in_all_data.py  requirements.txt  soc_dashboard.py
Kenngrößen_Tabellen/: Kenngrößen_Tabelle_6,12.html  Kenngrößen_Tabelle_6,18,30.html  Kenngrößen_Tabelle_Teil1.html  Kenngrößen_Tabelle_Teil1von3.html  Kenngrößen_Tabelle_Teil2.html  Kenngrößen_Tabelle_Teil2von3.html  Kenngrößen_Tabelle_Teil3von3.html  Kenngrößen_Tabelle_alle_Speicher.html
documents/: base_data.csv  base_data.pkl  netz_pv_mit_speichersimulation_eigenverbrauch.pkl
documents/Darstellung_der_Optmierungeslisten/: optimiert_2021-05-22_12000.csv  optimiert_2021-05-23_12000.csv  optimiert_2021-05-24_12000.csv  optimiert_2021-05-25_12000.csv  optimiert_2021-05-26_12000.csv  optimiert_2021-05-27_12000.csv  optimiert_2021-05-27_6000.csv  optimiert_2021-05-27_8000.csv  optimiert_2021-05-28_10000.csv  optimiert_2021-05-28_12000.csv  optimiert_2021-05-28_14000.csv  optimiert_2021-05-28_16000.csv  optimiert_2021-05-28_18000.csv  optimiert_2021-05-28_20000.csv  (+9 more)
grafische_Ergebnisse/: Vergleichende_Übersicht.py  anzeige_leistung_soc.py  dashboard.py  histogram_unterschiede_einspeisung.py  soc_dashboard.py
(+1176 files in other folders)
