[tool.poetry]
name = "bathesis-heimspeicher"
version = "0.1.0"
description = ""
authors = ["arontaupe <aron@petau.net>"]
readme = "README.md"
packages = [{include = "bathesis_heimspeicher"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
